# QT_Cpp_GUIs

./: .gitignore  README.md
HoursesGalaryGUI/: AboutPopup.qml  CMakeLists.txt  GalleryPage.qml  HG_resources.qrc  HomePage.qml  Main.qml  ProductPopup.qml  SplashScreen.qml  main.cpp  systeminfo.h
